day2/flaskapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
spec:
  containers:
  - name: flask
    image: harbor.lab.local/library/flaskapp:1.0
  imagePullSecrets:
    - name: harbor-creds
