day2/init-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-web
spec:
  containers:
  - image: nginx:1.19.2
    name: nginx
    volumeMounts:
    - name: app-data
      mountPath: /usr/share/nginx/html
  volumes:
  - name: app-data
    emptyDir: {}
