day2/second-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: second-pod
spec:
  containers:
  - name: my-api
    image: harbor.lab.local/library/my-api:1.0
    ports:
    - containerPort: 8080
  imagePullSecrets:
    - name: harbor-creds
