day2/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: ubuntu-pod
  name: ubuntu-pod
spec:
  containers:
  - image: ubuntu
    name: ubuntu-pod
    command: ['sh', '-c', 'tail -F /tmp/test']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
