day2/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: cars.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cars-svc
            port:
              number: 80
  - host: shop.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shop-svc
            port:
              number: 80
